# Core

./: .gitignore  CMakeLists.txt  Demo.cpp  Demo.h  Engine.cpp  Engine.h  Graphics.cpp  Graphics.h  README.md  combinelibs.mri  combinelibs_all.mri
GL/: AttributeArrayGL.h  AttributeArrayGPUStorageGL.h  CubeTextureGL.cpp  CubeTextureGL.h  GraphicsGL.cpp  GraphicsGL.h  IndexBufferGL.cpp  IndexBufferGL.h  MeshGL.cpp  MeshGL.h  RenderTarget2DGL.cpp  RenderTarget2DGL.h  RenderTargetCubeGL.cpp  RenderTargetCubeGL.h  RenderTargetGL.cpp  RenderTargetGL.h  RendererGL.cpp  RendererGL.h  ShaderDirectoryGL.cpp  ShaderDirectoryGL.h  ShaderGL.cpp  ShaderGL.h  ShaderManagerGL.cpp  ShaderManagerGL.h  Texture2DGL.cpp  Texture2DGL.h  TextureGL.cpp  TextureGL.h
animation/: Animation.cpp  Animation.h  AnimationInstance.cpp  AnimationInstance.h  AnimationManager.cpp  AnimationManager.h  AnimationPlayer.cpp  AnimationPlayer.h  BlendOp.cpp  BlendOp.h  Bone.cpp  Bone.h  CrossFadeBlendOp.cpp  CrossFadeBlendOp.h  KeyFrame.cpp  KeyFrame.h  KeyFrameSet.cpp  KeyFrameSet.h  Object3DSkeletonNode.cpp  Object3DSkeletonNode.h  RotationKeyFrame.cpp  RotationKeyFrame.h  ScaleKeyFrame.cpp  ScaleKeyFrame.h  Skeleton.cpp  Skeleton.h  TranslationKeyFrame.cpp  TranslationKeyFrame.h  VertexBoneMap.cpp  VertexBoneMap.h
asset/: AssetLoader.cpp  AssetLoader.h  ModelLoader.cpp  ModelLoader.h
base/: BaseVector.cpp  BaseVector.h  BitMask.h  CoreObject.cpp  CoreObject.h  CoreObjectReferenceManager.cpp  CoreObjectReferenceManager.h  VectorStorage.h
color/: Color.cpp  Color.h  Color4Components.cpp  Color4Components.h  IntColor.h
common/: Constants.cpp  Constants.h  Debug.cpp  Exception.h  assert.h  complextypes.h  debug.h  gl.h  types.h
filesys/: FileSystem.cpp  FileSystem.h  FileSystemIX.cpp  FileSystemIX.h
geometry/: AttributeArray.cpp  AttributeArray.h  AttributeArrayGPUStorage.cpp  AttributeArrayGPUStorage.h  AttributeType.h  Box3.cpp  Box3.h  GeometryUtils.cpp  GeometryUtils.h  Hit.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  RayCaster.h  Vector2.h  Vector2Components.cpp  Vector2Components.h  Vector3.h  Vector3Components.h  Vector4.h  Vector4Components.h
image/: Atlas.cpp  Atlas.h  CubeTexture.cpp  CubeTexture.h  GridAtlas.cpp  GridAtlas.h  ImageLoader.cpp  ImageLoader.h  ImagePainter.cpp  ImagePainter.h  PNGLoader.cpp  PNGLoader.h  RawImage.cpp  RawImage.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureAttr.cpp  TextureAttr.h  TextureUtils.cpp  TextureUtils.h
light/: AmbientIBLLight.cpp  AmbientIBLLight.h  AmbientLight.cpp  AmbientLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  LightCullType.h  LightPack.h  LightType.h  PointLight.cpp  PointLight.h  ShadowLight.cpp  ShadowLight.h
material/: AmbientPhysicalMaterial.cpp  AmbientPhysicalMaterial.h  BaseLitMaterial.cpp  BaseLitMaterial.h  BaseMaterial.cpp  BaseMaterial.h  BasicColoredMaterial.cpp  BasicColoredMaterial.h  BasicCubeMaterial.cpp  BasicCubeMaterial.h  BasicExtrusionMaterial.cpp  BasicExtrusionMaterial.h  BasicLitMaterial.cpp  BasicLitMaterial.h  BasicMaterial.cpp  BasicMaterial.h  BasicTexturedFullScreenQuadMaterial.cpp  BasicTexturedFullScreenQuadMaterial.h  BasicTexturedLitMaterial.cpp  BasicTexturedLitMaterial.h  BasicTexturedMaterial.cpp  BasicTexturedMaterial.h  BlurMaterial.cpp  BlurMaterial.h  BufferOutlineMaterial.cpp  BufferOutlineMaterial.h  CopyMaterial.cpp  CopyMaterial.h  DepthOnlyMaterial.cpp  DepthOnlyMaterial.h  DistanceOnlyMaterial.cpp  DistanceOnlyMaterial.h  EquirectangularMaterial.cpp  EquirectangularMaterial.h  IrradianceRendererMaterial.cpp  IrradianceRendererMaterial.h  IrridianceRendererMaterial.cpp  IrridianceRendererMaterial.h  Material.cpp  Material.h  (+48 more)
math/: Math.cpp  Math.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h
particles/: ParticleEmitter.h  ParticleSequence.cpp  ParticleSequence.h  ParticleSequenceGroup.cpp  ParticleSequenceGroup.h  ParticleState.h  ParticleStateInitializer.cpp  ParticleStateInitializer.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemAnimatedSpriteRenderer.cpp  ParticleSystemAnimatedSpriteRenderer.h  ParticleSystemManager.cpp  ParticleSystemManager.h  ParticleSystemPointRenderer.cpp  ParticleSystemPointRenderer.h  ParticleSystemRenderer.cpp  ParticleSystemRenderer.h  ParticleSystemSnapShot.cpp  ParticleSystemSnapShot.h
particles/initializer/: BasicParticleStateInitializer.cpp  BasicParticleStateInitializer.h  BoxPositionInitializer.cpp  BoxPositionInitializer.h  LifetimeInitializer.cpp  LifetimeInitializer.h  ParticleStateInitializer.cpp  ParticleStateInitializer.h  RandomVelocityInitializer.cpp  RandomVelocityInitializer.h  RotationInitializer.cpp  RotationInitializer.h  RotationalSpeedInitializer.cpp  RotationalSpeedInitializer.h  (+4 more)
render/: BaseObject3DRenderer.cpp  BaseObject3DRenderer.h  BaseObjectRenderer.cpp  BaseObjectRenderer.h  BaseRenderable.cpp  BaseRenderable.h  BaseRenderableContainer.cpp  BaseRenderableContainer.h  Camera.cpp  Camera.h  CubeFace.h  DepthOutputOverride.h  EngineRenderQueue.h  MaterialGroupedRenderQueue.cpp  MaterialGroupedRenderQueue.h  MeshContainer.cpp  MeshContainer.h  MeshOutlinePostProcessor.cpp  MeshOutlinePostProcessor.h  MeshRenderer.cpp  MeshRenderer.h  Object3DRenderer.cpp  Object3DRenderer.h  ObjectRenderer.cpp  ObjectRenderer.h  ObjectRenderers.cpp  ObjectRenderers.h  PostProcessor.h  PrimitiveType.h  ReflectionProbe.cpp  ReflectionProbe.h  RenderBuffer.h  RenderException.h  RenderItem.h  RenderList.cpp  RenderList.h  RenderPath.h  RenderQueue.cpp  RenderQueue.h  RenderQueueManager.cpp  (+26 more)
scene/: Object3D.cpp  Object3D.h  Object3DComponent.cpp  Object3DComponent.h  Octree.cpp  Octree.h  RayCaster.cpp  RayCaster.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h  Transform.cpp  Transform.h  TransformationSpace.h
util/: ContinuousArray.cpp  ContinuousArray.h  ObjectPool.h  PersistentWeakPointer.h  Pointer.h  Profiler.cpp  Profiler.h  SimpleObjectPool.h  String.cpp  String.h  Time.cpp  Time.h  Tree.h  ValidWeakPointer.h  ValueIterator.h  WeakPointer.h
(+28 files in other folders)
